[tool.poetry]
name = "weightmngmtbackend"
version = "0.1.0"
description = "Weight Management Backend"
authors = ["Daniel"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
